# trading-command-center

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  install.ps1  install.sh  nginx.conf  trading-command-center.code-workspace
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  start.sh
backend/alembic/: env.py
backend/app/: config.py  dependencies.py
backend/patches/: apply_patches.py  technical_analyst.py
backend/tests/: conftest.py  test_alembic_revisions.py  test_api_keys.py  test_auth.py  test_auth_service.py  test_behavioral_alerts.py  test_config.py  test_cron_validation.py  test_currency_tracking.py  test_default_llm_config.py  test_delivery_settings.py  test_encryption.py  test_finnhub_client.py  test_finnhub_entitlements.py  test_investor_profile.py  test_kalman_service.py  test_kalman_settings_api.py  test_llm_provider_utils.py  test_llm_providers.py  test_logo_cache_service.py  test_market_router.py  test_markov_service.py  test_outcome_service.py  test_peg.py  test_portfolio.py  test_portfolio_chat.py  test_portfolio_discover.py  test_portfolio_integration.py  test_portfolio_thesis.py  test_portfolio_trim_signals.py  test_response_language.py  test_runs.py  test_scheduler_integration.py  test_ticker_metadata_service.py  test_tickers_api.py  test_trading_agent_runner.py  test_tradingagents_analysts.py  test_tradingagents_grounding.py  test_trim_signal_service.py  (+4 more)
(+295 files in other folders)
