[project]
name = "agentfloor-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "bcrypt>=4.1",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "aiosmtplib>=3.0",
    "email-validator>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=1.0",
    "apscheduler>=4.0.0a5",
    "tradingagents>=0.7.0,<0.8.0",
]

[project.optional-dependencies]
markov-hmm = [
    "hmmlearn>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "unit: mark test as a unit test (no database)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.15.13",
]
